--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,3 +1,5 @@
+include ../blocks/practice/practice
+
 <!DOCTYPE html>
 html(lang="ru")
   head
@@ -5,3 +7,4 @@ html(lang="ru")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Practice
   body
+    +practice
