assign font color to variable

--- a/src/scss/modules/variables.scss
+++ b/src/scss/modules/variables.scss
@@ -2,6 +2,7 @@
 $bgColor: #34495E;
 $succesColor: #3bb78f;
 $failColor: #EA4341;
+$mainFontColor: #ECF0F1;
 // fonts
 $mainFont: 'Ruda Regular';
 $firstLvlheadingFont: 'Ruda Black';
