add max-width value to practice block

--- a/src/blocks/practice/practice.scss
+++ b/src/blocks/practice/practice.scss
@@ -1,3 +1,8 @@
+.practice {
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
 .practice__title {
   font-family: $firstLvlheadingFont;
   text-align: center;
